BUG FIX: Logo on mobile was not centered. Added .logo {display: block;}

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ header {
 .logo {
 	width: 125px;
 	height: 125px;
+	display: block;
 
 	/* Gives the logo some padding */
 	border: 30px solid transparent;
